github/workflow: add gcc-problem-patcher [skip ci]
let's make more visible the problems detected by the compiler

https://github.com/marketplace/actions/gcc-problem-matcher?version=0.1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
             compilier: clang
     steps:
       - uses: actions/checkout@v2
+      - uses: ammaraskar/gcc-problem-matcher@0.1
       - name: build
         run: |
           cd /code
